apps/kube/grafana/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: grafana-redirect
    namespace: default
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - grafana.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: RequestRedirect
                requestRedirect:
                    scheme: https
                    hostname: kbve.com
                    path:
                        type: ReplaceFullPath
                        replaceFullPath: /dashboard
                    statusCode: 301
